  - Redesign navigation for project pages
  - Fix groups API to list only user's accessible projects
  - Redesign account and email confirmation emails
  - `git clone https://host/namespace/project` now works, in addition to using the `.git` suffix
  - Bump nokogiri to 1.6.8
  - Use gitlab-shell v3.0.0
  - Upgrade to jQuery 2
  - Use Knapsack to evenly distribute tests across multiple nodes
  - Add `sha` parameter to MR merge API, to ensure only reviewed changes are merged
  - Don't allow MRs to be merged when commits were added since the last review / page load
  - Add DB index on users.state
  - Add rake task 'gitlab:db:configure' for conditionally seeding or migrating the database
  - Changed the Slack build message to use the singular duration if necessary (Aran Koning)
  - Links from a wiki page to other wiki pages should be rewritten as expected
  - Fix issues filter when ordering by milestone
  - Todos will display target state if issuable target is 'Closed' or 'Merged'
  - Fix bug when sorting issues by milestone due date and filtering by two or more labels
  - Add support for using Yubikeys (U2F) for two-factor authentication
  - Link to blank group icon doesn't throw a 404 anymore
  - Remove 'main language' feature
  - Pipelines can be canceled only when there are running builds
  - Use downcased path to container repository as this is expected path by Docker
  - Projects pending deletion will render a 404 page
  - Measure queue duration between gitlab-workhorse and Rails
  - Make Omniauth providers specs to not modify global configuration
  - Make authentication service for Container Registry to be compatible with < Docker 1.11
  - Add Application Setting to configure Container Registry token expire delay (default 5min)
  - Cache assigned issue and merge request counts in sidebar nav
  - Use Knapsack only in CI environment
  - Cache project build count in sidebar nav
  - Add milestone expire date to the right sidebar