@@ -24,6 +24,7 @@ v 8.9.0 (unreleased)
   - Bump nokogiri to 1.6.8
   - Use gitlab-shell v3.0.0
   - Upgrade to jQuery 2
+  - Let Workhorse serve format-patch diffs
   - Use Knapsack to evenly distribute tests across multiple nodes
   - Add `sha` parameter to MR merge API, to ensure only reviewed changes are merged
   - Don't allow MRs to be merged when commits were added since the last review / page load
